added tsconfigRootDir in eslint, added yarn pm2 commands

--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "db:setup": "cd platform/wab && yarn db:setup",
     "deps": "lerna list --include-dependencies --scope",
     "dev": "cd platform/wab && yarn dev",
+    "dev:debug": "cd platform/wab && yarn dev:debug",
+    "dev:watch": "cd platform/wab && yarn dev:watch",
     "dev:reset": "yarn setup && yarn db:reset && yarn dev",
+    "pm2:dev": "cd platform/wab && yarn pm2:dev",
+    "pm2:debug": "cd platform/wab && yarn pm2:debug",
+    "pm2:watch": "cd platform/wab && yarn pm2:watch",
+    "pm2:list": "cd platform/wab && yarn pm2:list",
+    "pm2:stop": "cd platform/wab && yarn pm2:stop",
     "e2e": "cd platform/wab && yarn cypress open",
     "e2e:headless": "cd platform/wab && yarn cypress run",
     "local-canary": "yarn local-unpublish && lerna publish --canary --yes --include-merged-tags --no-git-tag-version --no-push --registry=http://localhost:4873 --force-publish",
