--- a/platform/wab/package.json
+++ b/platform/wab/package.json
@@ -10,11 +10,21 @@
   "scripts": {
     "postinstall": "patch-package",
     "dev": "bash tools/dev.bash",
+    "dev:debug": "debug=1 bash tools/dev.bash",
+    "dev:watch": "watch=1 bash tools/dev.bash",
     "dev:screens": "bash tools/start.bash",
     "dev:frontend": "wait-on http://localhost:3004 && PORT=3003 yarn start",
     "dev:frontend:prodbuild": "wait-on http://localhost:3004 && PORT=3003 bash tools/dev-server.bash build && yarn dev:frontend:proxy",
     "dev:frontend:proxy": "cd build && npx -p local-web-server ws --spa index.html --port 3003 --cors.origin '*' --rewrite '/api/(.*) -> http://localhost:3004/api/$1'",
     "dev:backend": "yarn backend",
+    "pm2:dev": "npx pm2 start pm2-dev.config.js",
+    "pm2:debug": "PM2_BACKEND_MODE=debug npx pm2 start pm2-dev.config.js",
+    "pm2:watch": "PM2_BACKEND_MODE=watch npx pm2 start pm2-dev.config.js",
+    "pm2:logs": "npx pm2 logs",
+    "pm2:logs:dev": "npx pm2 logs dev-server",
+    "pm2:logs:backend": "npx pm2 logs backend",
+    "pm2:list": "npx pm2 list",
+    "pm2:stop": "npx pm2 stop all",
     "start": "bash tools/dev-server.bash start",
     "ts-watch": "NODE_OPTIONS='--max-old-space-size=16384' tsc --noEmit --watch",
     "typecheck": "NODE_OPTIONS='--max-old-space-size=16384' tsc --noEmit",
@@ -252,6 +262,7 @@
     "@plasmicpkgs/commerce-local": "^0.0.188",
     "@plasmicpkgs/plasmic-basic-components": "^0.0.209",
     "@plasmicpkgs/plasmic-embed-css": "^0.1.175",
+    "@plasmicpkgs/plasmic-query": "^0.0.208",
     "@plasmicpkgs/radix-ui": "^0.0.44",
     "@popperjs/core": "2.11.6",
     "@qualifyze/airtable-formulator": "^1.3.1",
